// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyerProducts Store can fetch category products and set data 1`] = `
Array [
  Object {
    "buyerProducts": Array [],
    "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
    "name": "Concentrates",
    "position": 1,
    "slug": "concentrates",
  },
  Object {
    "buyerProducts": Array [],
    "id": "e306a27d-5076-4074-ab7a-21f6485ad4bb",
    "name": "Edibles",
    "position": 3,
    "slug": "edibles",
  },
]
`;

exports[`BuyerProducts Store can fetch featured products and set data 1`] = `Array []`;

exports[`BuyerProducts Store can fetch product details and set data 1`] = `
Object {
  "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
  "priceRanges": Array [
    Object {
      "maxPrice": 20,
      "minPrice": 10,
      "unit": "gram",
    },
  ],
  "product": Object {
    "avatarImage": Object {
      "id": "41c06b6d-099c-48c4-82c6-015d3b8dcc3e",
      "largeUrl": "https://images.weedmaps.com/products/000/023/221/avatar/large/gfarmsalab_nug-run-indica_2.jpg?development=1",
      "mediumUrl": "https://images.weedmaps.com/products/000/023/221/avatar/medium/gfarmsalab_nug-run-indica_2.jpg?development=1",
      "smallUrl": "https://images.weedmaps.com/products/000/023/221/avatar/square/gfarmsalab_nug-run-indica_2.jpg?development=1",
    },
    "brand": Object {
      "address": undefined,
      "avatarImage": undefined,
      "contactName": null,
      "deliveryEta": undefined,
      "description": "<p><strong><ins>Our Mission:</ins></strong></p> <p><em>Leader of the American Cannabis Revolution</em></p> ",
      "email": null,
      "id": "d054b34f-428e-4583-a2a4-27f4e5aea6f3",
      "licenses": Array [
        Object {
          "id": "8c4369fc-a767-4e5c-9863-b5225705d563",
          "licenseType": "Sales",
          "number": "420710",
        },
      ],
      "minimumPurchasePrice": 123,
      "name": "GfarmaLabs",
      "phoneNumber": null,
      "shippingFee": undefined,
      "slug": "gfarmalabs",
    },
    "categories": Array [],
    "departments": Array [
      Object {
        "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
        "name": "Concentrates",
        "slug": "concentrates",
      },
    ],
    "description": "<p>G FarmaLabs is proud to bring you NUG RUN Cannabis Oil Injectors. This pharmaceutical grade Co2 extract is created by using 100% IndoorCannabis Flower and then further removing any undesirable compounds. By purifying the essential oils of what remains, Liquid Gold™ NUG RUN was born. Liquid Gold™ NUG RUN Cannabis Oil was developed to better serve Patients through the form of vaporizing. Cannabis vaporizers are designed to let users inhale active Cannabinoids while avoiding harmful smoke toxins. They do so by heating cannabis to a temperature of 180 - 200° C (356° - 392°), Just below the point of combustion where smoke is produced. By vaporizing, THC and other medically active Cannabinoids are emitted with little to none of the carcinogenic tars and noxious gasses found in smoke. Many medical marijuana patients who find smoking marijuana highly irritating, report effective relief through vaporizers. Users who are concerned about the respiratory hazards of smoking are strongly advised to use vaporizers. Liquid Gold™ NUG RUN Cannabis Oil Injectors is available in .5 GRAM Injector, manufactured to fit most Vape Pen batteries in the marketplace.</p>",
    "galleryImages": Array [
      Object {
        "id": "1608ec15-013e-4a77-9cb9-27cc232a6640",
        "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
        "mediumUrl": "https://images.weedmaps.com/photos/products/000/023/221/medium/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
        "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
      },
      Object {
        "id": "b2d1cf18-e1e1-443a-985a-bec6b104eaac",
        "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
        "mediumUrl": "https://images.weedmaps.com/photos/products/000/023/221/medium/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
        "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
      },
    ],
    "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
    "name": "NUG RUN Injector, Indica",
    "slug": "gfarmalabs-nug-run-injector-indica",
    "variants": Array [
      Object {
        "allocations": Array [
          Object {
            "active": true,
            "amount": 81,
            "currency": "usd",
            "id": "091ed653-2f28-4904-89b8-5ba31330a21d",
            "price": "30",
            "zone": undefined,
          },
        ],
        "id": "5cfce13e-b8b9-4da0-a363-4becc6a06bb9",
        "name": "Eighth Pack",
        "size": 3.5,
        "sku": "12345",
        "unit": "gram",
      },
    ],
  },
}
`;

exports[`BuyerProducts Store can fetch product search and set data 1`] = `
Array [
  Object {
    "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
    "priceRanges": Array [
      Object {
        "maxPrice": 20,
        "minPrice": 10,
        "unit": "gram",
      },
    ],
    "product": Object {
      "avatarImage": Object {
        "id": "41c06b6d-099c-48c4-82c6-015d3b8dcc3e",
        "largeUrl": "https://images.weedmaps.com/products/000/023/221/avatar/large/gfarmsalab_nug-run-indica_2.jpg?development=1",
        "mediumUrl": "https://images.weedmaps.com/products/000/023/221/avatar/medium/gfarmsalab_nug-run-indica_2.jpg?development=1",
        "smallUrl": "https://images.weedmaps.com/products/000/023/221/avatar/square/gfarmsalab_nug-run-indica_2.jpg?development=1",
      },
      "brand": Object {
        "address": undefined,
        "avatarImage": undefined,
        "contactName": null,
        "deliveryEta": undefined,
        "description": "<p><strong><ins>Our Mission:</ins></strong></p> <p><em>Leader of the American Cannabis Revolution</em></p> ",
        "email": null,
        "id": "d054b34f-428e-4583-a2a4-27f4e5aea6f3",
        "licenses": Array [
          Object {
            "id": "8c4369fc-a767-4e5c-9863-b5225705d563",
            "licenseType": "Sales",
            "number": "420710",
          },
        ],
        "minimumPurchasePrice": 123,
        "name": "GfarmaLabs",
        "phoneNumber": null,
        "shippingFee": undefined,
        "slug": "gfarmalabs",
      },
      "categories": Array [],
      "departments": Array [
        Object {
          "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
          "name": "Concentrates",
          "slug": "concentrates",
        },
      ],
      "description": "<p>G FarmaLabs is proud to bring you NUG RUN Cannabis Oil Injectors. This pharmaceutical grade Co2 extract is created by using 100% IndoorCannabis Flower and then further removing any undesirable compounds. By purifying the essential oils of what remains, Liquid Gold™ NUG RUN was born. Liquid Gold™ NUG RUN Cannabis Oil was developed to better serve Patients through the form of vaporizing. Cannabis vaporizers are designed to let users inhale active Cannabinoids while avoiding harmful smoke toxins. They do so by heating cannabis to a temperature of 180 - 200° C (356° - 392°), Just below the point of combustion where smoke is produced. By vaporizing, THC and other medically active Cannabinoids are emitted with little to none of the carcinogenic tars and noxious gasses found in smoke. Many medical marijuana patients who find smoking marijuana highly irritating, report effective relief through vaporizers. Users who are concerned about the respiratory hazards of smoking are strongly advised to use vaporizers. Liquid Gold™ NUG RUN Cannabis Oil Injectors is available in .5 GRAM Injector, manufactured to fit most Vape Pen batteries in the marketplace.</p>",
      "galleryImages": Array [
        Object {
          "id": "1608ec15-013e-4a77-9cb9-27cc232a6640",
          "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
          "mediumUrl": "https://images.weedmaps.com/photos/products/000/023/221/medium/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
          "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
        },
        Object {
          "id": "b2d1cf18-e1e1-443a-985a-bec6b104eaac",
          "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
          "mediumUrl": "https://images.weedmaps.com/photos/products/000/023/221/medium/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
          "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
        },
      ],
      "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
      "name": "NUG RUN Injector, Indica",
      "slug": "gfarmalabs-nug-run-injector-indica",
      "variants": Array [
        Object {
          "allocations": Array [
            Object {
              "active": true,
              "amount": 81,
              "currency": "usd",
              "id": "091ed653-2f28-4904-89b8-5ba31330a21d",
              "price": "30",
              "zone": undefined,
            },
          ],
          "id": "5cfce13e-b8b9-4da0-a363-4becc6a06bb9",
          "name": "Eighth Pack",
          "size": 3.5,
          "sku": "12345",
          "unit": "gram",
        },
      ],
    },
  },
]
`;

exports[`BuyerProducts Store can return the category products view 1`] = `
Array [
  Object {
    "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
    "name": "Concentrates",
    "products": Array [],
  },
  Object {
    "id": "e306a27d-5076-4074-ab7a-21f6485ad4bb",
    "name": "Edibles",
    "products": Array [],
  },
]
`;

exports[`BuyerProducts Store can return the product breadcrumb view 1`] = `
Array [
  Object {
    "id": "81ac71b1-1c0c-490e-ad8a-062a6a1ae9a6",
    "name": "Concentrates",
    "slug": "concentrates",
  },
]
`;

exports[`BuyerProducts Store can return the product details view 1`] = `
Object {
  "avatarImage": Object {
    "id": "41c06b6d-099c-48c4-82c6-015d3b8dcc3e",
    "largeUrl": "https://images.weedmaps.com/products/000/023/221/avatar/large/gfarmsalab_nug-run-indica_2.jpg?development=1",
    "mediumUrl": "https://images.weedmaps.com/products/000/023/221/avatar/medium/gfarmsalab_nug-run-indica_2.jpg?development=1",
    "smallUrl": "https://images.weedmaps.com/products/000/023/221/avatar/square/gfarmsalab_nug-run-indica_2.jpg?development=1",
  },
  "brand": "GfarmaLabs",
  "description": "<p>G FarmaLabs is proud to bring you NUG RUN Cannabis Oil Injectors. This pharmaceutical grade Co2 extract is created by using 100% IndoorCannabis Flower and then further removing any undesirable compounds. By purifying the essential oils of what remains, Liquid Gold™ NUG RUN was born. Liquid Gold™ NUG RUN Cannabis Oil was developed to better serve Patients through the form of vaporizing. Cannabis vaporizers are designed to let users inhale active Cannabinoids while avoiding harmful smoke toxins. They do so by heating cannabis to a temperature of 180 - 200° C (356° - 392°), Just below the point of combustion where smoke is produced. By vaporizing, THC and other medically active Cannabinoids are emitted with little to none of the carcinogenic tars and noxious gasses found in smoke. Many medical marijuana patients who find smoking marijuana highly irritating, report effective relief through vaporizers. Users who are concerned about the respiratory hazards of smoking are strongly advised to use vaporizers. Liquid Gold™ NUG RUN Cannabis Oil Injectors is available in .5 GRAM Injector, manufactured to fit most Vape Pen batteries in the marketplace.</p>",
  "galleryImages": Array [
    Object {
      "id": "1608ec15-013e-4a77-9cb9-27cc232a6640",
      "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
      "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29923_gfarmsalab_nug-run-indica_2.jpg?development=1",
    },
    Object {
      "id": "b2d1cf18-e1e1-443a-985a-bec6b104eaac",
      "largeUrl": "https://images.weedmaps.com/photos/products/000/023/221/large/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
      "smallUrl": "https://images.weedmaps.com/photos/products/000/023/221/square/29969_gfarmsalab_nug-run-indica_1.jpg?development=1",
    },
  ],
  "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
  "licenses": Array [
    Object {
      "id": "8c4369fc-a767-4e5c-9863-b5225705d563",
      "licenseType": "Sales",
      "number": "420710",
    },
  ],
  "name": "NUG RUN Injector, Indica",
  "priceRanges": Array [
    Object {
      "maxPrice": 20,
      "minPrice": 10,
      "unit": "gram",
    },
  ],
}
`;

exports[`BuyerProducts Store can return the product variants view 1`] = `
Array [
  Object {
    "amount": 81,
    "id": "5cfce13e-b8b9-4da0-a363-4becc6a06bb9",
    "inStock": true,
    "name": "Eighth Pack",
    "price": 30,
    "size": 3.5,
    "unit": "gram",
  },
]
`;

exports[`BuyerProducts Store can return the search results view 1`] = `
Array [
  Object {
    "brand": "GfarmaLabs",
    "category": "Concentrates",
    "id": "5cd4463d-52bf-4b18-84f4-e3b378fbc989",
    "imageUrl": "https://images.weedmaps.com/products/000/023/221/avatar/medium/gfarmsalab_nug-run-indica_2.jpg?development=1",
    "name": "NUG RUN Injector, Indica",
    "outOfStock": false,
    "priceRanges": Array [
      Object {
        "maxPrice": 20,
        "minPrice": 10,
        "unit": "gram",
      },
    ],
  },
]
`;
